TODO
- Improved bulkiness of tsunami's and interactive waves
	- And added a new setting to customize it at will
- Improved resolution of ship previews
- ShipBuilder:
	- Undo actions survive going back and forth to and from game
- Added 12 new ships

1.19.2
- Added new "LightningStrike" tool - conjures lightnings against the ship
- Added 3 new electrical materials:
	- Thermal switches: toggle automatically with temperature
	- Timer switches: toggle automatically with time
		- Can now construct circuits that evolve over time!
	- Non-instanced sounds: like the "normal" sounds, but without a switch - playing automatically when powered
		- For example, playing an alarm when the ship gets hot
- Added Nitroglycerin material - explodes when damaged!
- Added underwater plants
- Improved auto-focus on ship
- Clouds' horizontal positions are now perspective-corrected
	- Thanks to Dario Bazzichetto for the idea!
- Various performance improvements
	- Significant performance improvements in spring relaxation algorithm
	- 15% performance improvements in rendering
- Added more ocean floor textures!
- ShipBuilder:
	- Added StructureTracer tool: automatically traces a ship's hull from a texture
	- Added tool for finely traslating texture layer pixel-by-pixel
- Added Brazilian Portuguese translation - thanks to Matheus Silva!
- Added 12 new ships
- ...and a few more small improvements and glitch fixes here and there!

1.19.1
- Added explosive furniture NPCs
	- ...adding a whole new dimension to the game!
	- Fine-tuned general explosion physics in the process
- Added thermodynamics and sounds to NPC simulation
	- With proper heat dissipation and transfer between NPCs and ship/ambient
- Improved Human NPC behaviors:
	- NPCs now "look ahead" when walking and avoid falling into holes
	- NPCs run away from running water
- Added new bomb type: Fire-Extinguishing Bomb
	- Use it to quickly extinguish fires, but watch out for its blast wave!
	- ...also added as NPC